<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.activities.LoginActivity">

    <TextView
            android:id="@+id/loginTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_login"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigth_component_basic"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/margin_drawable"
                android:paddingStart="12dp"
                android:hint="@string/email"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_white_transparent"/>

        <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigth_component_basic"
                android:layout_marginTop="@dimen/margin_base"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/margin_drawable"
                android:paddingStart="12dp"
                android:hint="@string/password"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:background="@drawable/rounded_white_transparent"/>

        <Button
                android:id="@+id/loginAuthenticateButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigth_component_basic"
                android:text="@string/authenticate"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_extra"
                android:background="@drawable/rounded_solid_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>