<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/actionSearch"
          android:title = "@string/search"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/actionLogOut"
          android:title = "@string/logout"
          android:icon="@drawable/ic_exit_to_app"
          app:showAsAction="ifRoom|collapseActionView"/>
</menu>